--- a/Hafta7/src/app/components/home/home.component.html
+++ b/Hafta7/src/app/components/home/home.component.html
@@ -1,1 +1,62 @@
-<p>home works!</p>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-md-8">
+            <h5>Kayıtlar</h5>
+            <table class="table table-hover table-sm">
+                <thead class="">
+                    <tr>
+                        <th>Id</th>
+                        <th>Adı Soyadı</th>
+                        <th>E-Posta</th>
+                        <th>Yaş</th>
+                        <th>Kayıt Tarihi</th>
+                        <th>Düzenleme Tarihi</th>
+                        <th>Düzenle</th>
+                        <th>Sil</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let kayit of kayitlar">
+                        <td>{{kayit.id}}</td>
+                        <td>{{kayit.adsoyad}}</td>
+                        <td>{{kayit.mail}}</td>
+                        <td>{{kayit.yas}}</td>
+                        <td>{{kayit.kayTarih | date:'dd.MM.yyyy HH:mm:ss'}}</td>
+                        <td>{{kayit.duzTarih | date:'dd.MM.yyyy HH:mm:ss'}}</td>
+                        <td><button class="btn btn-outline-warning">Düzenle</button></td>
+                        <td><button class="btn btn-outline-danger">Sil</button></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <div class="col-md-4">
+            <h5>Kayıt Ekle</h5>
+
+            <form #kayitForm="ngForm" (ngSubmit)="Kaydet()">
+                <div class="form-group">
+                    <label class="form-label">Adı Soyadı</label>
+                    <input class="form-control" type="text" name="adsoyad" #adsoyad ngModel
+                        [(ngModel)]="secKayit.adsoyad" required>
+                    <input class="form-control" type="text" name="id" #id ngModel
+                        [(ngModel)]="secKayit.id" required>
+                </div>
+                <div class="form-group">
+                    <label class="form-label">E-Posta</label>
+                    <input class="form-control" type="text" name="mail" #mail ngModel [(ngModel)]="secKayit.mail"
+                        required>
+                </div>
+                <div class="form-group">
+                    <label class="form-label">Yaş</label>
+                    <input class="form-control" type="number" name="yas" #yas ngModel [(ngModel)]="secKayit.yas"
+                        required>
+                </div>
+                <input type="submit" value="Kaydet" class="btn btn-outline-success mt-2" [disabled]="kayitForm.invalid">
+                <div class="mt-3" [ngClass]="sonuc.islem ? 'alert alert-success':'alert alert-danger'"
+                    *ngIf="sonuc.mesaj?.length>0">
+                    {{sonuc.mesaj}}
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
