--- a/Hafta7/src/app/components/home/home.component.html
+++ b/Hafta7/src/app/components/home/home.component.html
@@ -23,8 +23,8 @@
                         <td>{{kayit.yas}}</td>
                         <td>{{kayit.kayTarih | date:'dd.MM.yyyy HH:mm:ss'}}</td>
                         <td>{{kayit.duzTarih | date:'dd.MM.yyyy HH:mm:ss'}}</td>
-                        <td><button class="btn btn-outline-warning">Düzenle</button></td>
-                        <td><button class="btn btn-outline-danger">Sil</button></td>
+                        <td><button class="btn btn-outline-warning" (click)="Duzenle(kayit)">Düzenle</button></td>
+                        <td><button class="btn btn-outline-danger" (click)="Sil(kayit)">Sil</button></td>
                     </tr>
                 </tbody>
             </table>
@@ -38,8 +38,7 @@
                     <label class="form-label">Adı Soyadı</label>
                     <input class="form-control" type="text" name="adsoyad" #adsoyad ngModel
                         [(ngModel)]="secKayit.adsoyad" required>
-                    <input class="form-control" type="text" name="id" #id ngModel
-                        [(ngModel)]="secKayit.id" required>
+                    <input class="form-control" type="hidden" name="id" #id ngModel [(ngModel)]="secKayit.id" required>
                 </div>
                 <div class="form-group">
                     <label class="form-label">E-Posta</label>
@@ -51,10 +50,15 @@
                     <input class="form-control" type="number" name="yas" #yas ngModel [(ngModel)]="secKayit.yas"
                         required>
                 </div>
-                <input type="submit" value="Kaydet" class="btn btn-outline-success mt-2" [disabled]="kayitForm.invalid">
-                <div class="mt-3" [ngClass]="sonuc.islem ? 'alert alert-success':'alert alert-danger'"
-                    *ngIf="sonuc.mesaj?.length>0">
-                    {{sonuc.mesaj}}
+                <div class="form-group">
+                    <input type="submit" value="Kaydet" class="btn btn-outline-success mt-2"
+                        [disabled]="kayitForm.invalid">
+                    <button class="btn btn-outline-danger ms-2 mt-2" (click)="Vazgec()"
+                        *ngIf="secKayit.id!=0">Vazgeç</button>
+                    <div class="mt-3" [ngClass]="sonuc.islem ? 'alert alert-success':'alert alert-danger'"
+                        *ngIf="sonuc.mesaj?.length>0">
+                        {{sonuc.mesaj}}
+                    </div>
                 </div>
             </form>
         </div>
